# CHRONON-1

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_FUNCTIONAL.md  REPRODUCIBILITY.md  check_logo.py  config.yml  convert_final_icon.py  convert_icon.py  create_shortcut.ps1  docker-compose.yml  history.json  make_logo_trans.py  pyproject.toml  run_gui.bat  setup_installer.bat
app/: requirements.txt
chronon_core/: ablations.py  blinding.py  cci.py  cli.py  cli_legacy.py  comparison.py  diagnostics.py  interpretation.py  io.py  ledger.py  preprocess.py  publishing.py  qc.py  qubits.py  reporting.py  reproduce.py  sensitivity.py  simulator.py  stats.py  windowing.py
configs/: public_dataset_template.yml  toy.yml
notebooks/: 01_gr_subtraction_slope_fit.ipynb  02_clock_residual_simulator.ipynb  03_common_mode_bayes.ipynb  04_qubit_T2_gradient_fit.ipynb  05_cosmo_Ephi_fit.ipynb  06_spectroscopy_drift_bounds.ipynb
scripts/: 00_ledger_packager.py  generate_toy.py  reproduce_export.py  validate_scientific.py
tests/: test_config.py  test_edge_cases.py  test_integration.py  test_qc.py  test_reproduce.py  test_stats.py
validation_results/: ledger_row_D1_S1 (Null)_0_2025-12-05T215359270969.json  ledger_row_D1_S1 (Null)_0_2025-12-05T215453681490.json  ledger_row_D1_S1 (Null)_0_2025-12-05T215634175975.json  ledger_row_D1_S1 (Null)_10_2025-12-05T215359292205.json  ledger_row_D1_S1 (Null)_10_2025-12-05T215453703475.json  ledger_row_D1_S1 (Null)_10_2025-12-05T215634198275.json  ledger_row_D1_S1 (Null)_11_2025-12-05T215359294211.json  ledger_row_D1_S1 (Null)_11_2025-12-05T215453705534.json  ledger_row_D1_S1 (Null)_11_2025-12-05T215634200793.json  ledger_row_D1_S1 (Null)_12_2025-12-05T215359295722.json  ledger_row_D1_S1 (Null)_12_2025-12-05T215453707267.json  ledger_row_D1_S1 (Null)_12_2025-12-05T215634201837.json  ledger_row_D1_S1 (Null)_13_2025-12-05T215359297313.json  ledger_row_D1_S1 (Null)_13_2025-12-05T215453708799.json  ledger_row_D1_S1 (Null)_13_2025-12-05T215634204869.json  ledger_row_D1_S1 (Null)_14_2025-12-05T215359299387.json  ledger_row_D1_S1 (Null)_14_2025-12-05T215453711364.json  ledger_row_D1_S1 (Null)_14_2025-12-05T215634206755.json  ledger_row_D1_S1 (Null)_15_2025-12-05T215359301073.json  ledger_row_D1_S1 (Null)_15_2025-12-05T215453712371.json  ledger_row_D1_S1 (Null)_15_2025-12-05T215634209054.json  ledger_row_D1_S1 (Null)_16_2025-12-05T215359301618.json  (+1781 more)
(+35 files in other folders)
