
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronon"
version = "1.0.0"
description = "Scientific validation and regression suite for CHRONON Protocol"
authors = [
  { name="Damien Brecheteau", email="damien@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "customtkinter>=5.0.0",
    "pyserial>=3.5",
]

[project.scripts]
chronon-gui = "app.main:main"

[tool.setuptools]
packages = ["chronon_core", "app", "scripts"]
