[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronon-1"
version = "1.0.0"
description = "CHRONON-1 analysis and reproducibility pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Benjamin Brécheteau"}]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "statsmodels",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "websockets",
    "customtkinter",
    "packaging",
    "pyserial"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
chronon1 = "chronon_core.cli:main"

[tool.setuptools]
packages = ["chronon_core", "app"]
